# gpuStencil

./: a.out  meson.build  meson_options.txt  notes.md
.cache/clangd/index/: example1.cu.7D040AAADA940CE5.idx  gpuStencil.cuh.64A6FEE5AC9021CB.idx
examples/: example1.cu  meson.build
lib/: Accelerator.cu  Accelerator.h  datatypes.cuh  error.h  gpuStencil.cuh  kernels.cuh  meson.build
tests/: 1p_1s_1r.cu  1p_1s_multir.cu  1p_multis_multir.cu  meson.build  multip_multis_multir.cu  multip_multis_multir_GRID.cu  test1.cu
